--- a/frontend/src/app/components/feed/feed.component.scss
+++ b/frontend/src/app/components/feed/feed.component.scss
@@ -12,7 +12,7 @@
 
 .bottom {
     height: 50px;
-    display: block;
+    display: flex;
 }
 
 .scroll-container {
